[gd_scene load_steps=9 format=3 uid="uid://ch62sapasntay"]

[ext_resource type="Script" path="res://scripts/animal.gd" id="1_ihnpr"]
[ext_resource type="Texture2D" uid="uid://dk74crlw744tj" path="res://icon.svg" id="1_l5pxc"]
[ext_resource type="Texture2D" uid="uid://bm3hlcoomk0gp" path="res://assets/items/arrow.png" id="3_tu1kl"]
[ext_resource type="AudioStream" uid="uid://ccxa6njvihwbe" path="res://assets/audio/stretch2.ogg" id="4_5qjbm"]
[ext_resource type="AudioStream" uid="uid://biooblpoq8ujo" path="res://assets/audio/catapult.ogg" id="5_hd6ms"]
[ext_resource type="AudioStream" uid="uid://jorr8ouq8yhx" path="res://assets/audio/kick_wood.ogg" id="6_m1plh"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_oi4u6"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_1tvpe"]
radius = 19.6147

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_oi4u6")
freeze = true
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_ihnpr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_l5pxc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.99, 0.99)
shape = SubResource("CircleShape2D_1tvpe")

[node name="Notifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_tu1kl")
offset = Vector2(150, 0)

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5qjbm")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hd6ms")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_m1plh")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="Notifier" to="." method="_on_notifier_screen_exited"]
